fix nonfixed bg on ios

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -5,7 +5,6 @@
   height: 100vh;
   background-image: url(../images/stars.png);
   background-size: 500px;
-  background-attachment: fixed;
   background-position: bottom;
   background-repeat: repeat;
   bottom: 0;
@@ -17,7 +16,7 @@
 .background {
   width: 100vw;
   height: 100vh;
-  position: fixed;
+  position: absolute;
   z-index: -1;
   max-width: 1080px;
   max-height: 900px;
